--- a/WebApp/wwwroot/Styles/shared.scss
+++ b/WebApp/wwwroot/Styles/shared.scss
@@ -1503,3 +1503,24 @@ nav {
         border-radius: 0 0.4rem 0.4rem 0;
     }
 }
+
+.reports--container {
+    input{
+        width: 12vw;
+    }
+    .form--group{
+
+        input {
+            width: 5vw;
+            margin-right: 2vw;
+        }
+    }
+
+    p{
+        margin-left: 2vw;
+    }
+}
+
+.a--no--style{
+    text-decoration: none;
+}
