--- a/WebApp/Views/Shared/_Layout.cshtml
+++ b/WebApp/Views/Shared/_Layout.cshtml
@@ -70,7 +70,14 @@
 		<div>
 			<ul class="navbar-nav flex-grow-1 loginSection">
 				@if (Context.User.Identity.IsAuthenticated)
-				{
+                {
+                    @if (Context.Items["role"] == "admin")
+                    {
+                        <li>
+                            <a class="button button--rounded button--secondary a--no--style" asp-action="AdminPanel" asp-controller="Admin" style="margin-right:1.5vw">@WebApp.Resources.Shared.AdminPanel</a>
+                        </li>
+                    }
+
 					<li class="currentLogin">
 						@WebApp.Resources.Shared.LoggedInAs @Context.User.Identity.Name
 					</li>
