--- a/WebApp/wwwroot/Styles/shared.scss
+++ b/WebApp/wwwroot/Styles/shared.scss
@@ -528,6 +528,13 @@ input[type=file] {
     margin: 5pt;
     flex: 1;
     position: relative;
+
+    .header {
+        display: flex;
+        position: relative;
+        justify-content: space-between;
+        align-items: center;
+    }
 }
 
 .box--vertical .box--text {
@@ -1539,4 +1546,25 @@ nav {
     flex-direction: row;
     align-items: center;
     justify-content: space-between;
+}
+
+.svg--icon {
+    height: 40px;
+}
+
+
+.dropdown--button {
+    height: 50%;
+    font-size: x-large;
+    padding: 5pt;
+}
+
+.dropdown--auctions {
+    display: flex;
+    flex-direction: column;
+    width: 150px;
+    position: absolute;
+    margin-right: 0.5vw;
+    background-color: aqua;
+    z-index: 2;
 }
