refactor - removed BackgroundTasks

--- a/WebApp/wwwroot/Styles/light.scss
+++ b/WebApp/wwwroot/Styles/light.scss
@@ -45,7 +45,7 @@
     .background {
 
         &--primary {
-            background-color: aliceblue;
+            background-color: white;
         }
 
         &--error {
@@ -65,7 +65,7 @@
     }
 
     .user--details .item {
-        background: aliceblue;
+        background: white;
     }
 }
 
