--- a/WebApp/wwwroot/css/dark.css
+++ b/WebApp/wwwroot/css/dark.css
@@ -50,7 +50,7 @@
   background-color: lightslategrey;
 }
 .dark-mode .border--primary {
-  border-color: aliceblue;
+  border-color: white;
 }
 .dark-mode .form--input {
   color: white;
