--- a/WebApp/Views/Chat/Index.cshtml
+++ b/WebApp/Views/Chat/Index.cshtml
@@ -71,7 +71,7 @@
             </div>
             <div style="height:2%;"></div>
             <div style="width:100%; height:23%; border-radius: 9px; box-shadow: inset 0 0 8px 0px #00000080;">
-                <form action="/Chat/Send" method="post" style="display: flex;align-content: stretch;align-items: stretch;justify-content: space-around;flex-direction: row;">
+                <form action="/Chat/Send" method="post" style="height: 100%; display: flex;align-content: stretch;align-items: stretch;justify-content: space-around;flex-direction: row;">
                     <input type="hidden" id="id" name="id" value="@Model.Id"/>
                     <textarea type="text" id="message" name="message" style="background: transparent;border: none;width: -webkit-fill-available;color: white;height: 140px;border-radius: 9px 0px 0px 9px;resize: none;"></textarea>
                     <button class="button button--primary button--rounded button--thin" style="height: auto; border-radius: 0px 9px 9px 0px;" type="submit">Send</button>
