--- a/WebApp/wwwroot/Styles/shared.scss
+++ b/WebApp/wwwroot/Styles/shared.scss
@@ -1047,6 +1047,8 @@ nav {
         &--left--panel {
             
             margin-right: 2vw;
+            
+            
         }
 
         &--right--panel {
@@ -1241,6 +1243,10 @@ nav {
     &--left--panel {
         flex: 3;
         margin-right: 2vw;
+
+        .main--image {
+            width: 80%;
+        }
     }
 
     &--right--panel {
@@ -1305,7 +1311,7 @@ nav {
             flex: 0 0 100%;
         }
 
-        &--popup{
+        &--popup {
             display: none;
             border: 1px solid;
             border-top: 0px;
@@ -1313,7 +1319,7 @@ nav {
             padding: 2.5vh 1.5vw;
         }
 
-        &s--list{
+        &s--list {
             min-height: 60vh;
             max-height: 60vh;
             overflow-y: scroll;
