--- a/WebApp/Views/Authentication/_LogoutButton.cshtml
+++ b/WebApp/Views/Authentication/_LogoutButton.cshtml
@@ -7,7 +7,7 @@
     function LogOut(id) {
         $.post("@Url.Action("Logout","Authentication")",
             function (data) {
-                location.reload();
+                window.location.href = '/';
             }
         );
     }
