--- a/WebApp/Views/Authentication/_LoginModal.cshtml
+++ b/WebApp/Views/Authentication/_LoginModal.cshtml
@@ -1,7 +1,7 @@
 ﻿@using Auth = WebApp.Resources.Authentication.Localization
 @using WebApp.Resources
 
-<div class="modal-dialog">
+<div class="modal-dialog background--primary">
     <div class="modal-content background--primary">
         <div class="form--heading" style="margin-top: 2vh;">
             <h4 class="text--primary .form--group">@Auth.Login</h4>
