--- a/WebApp/Views/Shared/_Layout.cshtml
+++ b/WebApp/Views/Shared/_Layout.cshtml
@@ -22,24 +22,24 @@
             <div class="header--right">
                 @if(Context.User.Claims.Any()){
 
-                    <a asp-action="UserAccount" asp-controller="Users" asp-route-id="@Context.User.Claims.FirstOrDefault(c => c.Type.ToLower().Contains("userid")).Value">
 
                         <div class="username--box text--primary background--primary border--primary">
+                            <a asp-action="UserAccount" asp-controller="Users" asp-route-id="@Context.User.Claims.FirstOrDefault(c => c.Type.ToLower().Contains("userid")).Value" class="text--primary">
                             <span>@Context.User.Claims.FirstOrDefault(c => c.Type.ToLower().Contains("name")).Value</span>
                             <button class="round--svg--button text--primary background--primary border--primary">
                                 <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-person" viewBox="0 0 16 16">
                                     <path d="M8 8a3 3 0 1 0 0-6 3 3 0 0 0 0 6Zm2-3a2 2 0 1 1-4 0 2 2 0 0 1 4 0Zm4 8c0 1-1 1-1 1H3s-1 0-1-1 1-4 6-4 6 3 6 4Zm-1-.004c-.001-.246-.154-.986-.832-1.664C11.516 10.68 10.289 10 8 10c-2.29 0-3.516.68-4.168 1.332-.678.678-.83 1.418-.832 1.664h10Z" />
                                 </svg>
                             </button>
+                            </a>
                        </div>
-                    </a>
-                    <a asp-action="Index" asp-controller="Chat">
                         <button class="round--svg--button text--primary background--primary border--primary">
+                    <a asp-action="Index" asp-controller="Chat" class="text--primary">
                             <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-envelope" viewBox="0 0 16 16">
                                 <path d="M0 4a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v8a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V4Zm2-1a1 1 0 0 0-1 1v.217l7 4.2 7-4.2V4a1 1 0 0 0-1-1H2Zm13 2.383-4.708 2.825L15 11.105V5.383Zm-.034 6.876-5.64-3.471L8 9.583l-1.326-.795-5.64 3.47A1 1 0 0 0 2 13h12a1 1 0 0 0 .966-.741ZM1 11.105l4.708-2.897L1 5.383v5.722Z" />
                             </svg>
-                        </button>
                     </a>
+                        </button>
                 }
                 <partial name="_ChooseThemePartial"></partial>
             </div>
