--- a/WebApp/wwwroot/Styles/shared.scss
+++ b/WebApp/wwwroot/Styles/shared.scss
@@ -776,30 +776,35 @@ input[type=file] {
     display: flex;
     flex-direction: column;
     width: 52px;
+    z-index: 1000000;
     position: absolute;
     margin-left: 1vw;
+
     button {
         margin-bottom: 0;
-
         margin-top: 0;
         border: 0;
         width: 50px;
         aspect-ratio: 1/1;
         border-left: 1px solid;
-        border-right:1px solid;
+        border-right: 1px solid;
+
         &:hover {
             opacity: 50%;
         }
 
 
-        &:last-child{
+        &:last-child {
             border: 1px solid;
             border-radius: 0 0 50% 50%;
             border-top: 0px;
         }
-    }
 
-    
+        &:focus-visible {
+            outline-offset: unset;
+            outline: unset;
+        }
+    }
 }
 
 .theme--form{
@@ -814,6 +819,7 @@ input[type=file] {
     width: 50px;
     border-radius: 50%;
     aspect-ratio: 1 / 1;
+    height: 50px;
     margin-left: 1vw;
     &:hover {
         opacity: 50%;
