--- a/WebApp/Views/Shared/_Searchbox.cshtml
+++ b/WebApp/Views/Shared/_Searchbox.cshtml
@@ -41,6 +41,18 @@
         <option>Option4.2</option>
         <option>Option4.3</option>
         <option>Option4.4</option>
+        <optgroup label="Option4">
+            <option>Option4.1</option>
+            <option>Option4.2</option>
+            <option>Option4.3</option>
+            <option>Option4.4</option>
+            <optgroup label="Option4">
+                <option>Option4.1</option>
+                <option>Option4.2</option>
+                <option>Option4.3</option>
+                <option>Option4.4</option>
+            </optgroup>
+        </optgroup>
     </optgroup>
 </select>
     <button class="header--searchbar--button text--primary background--primary border--primary" type="submit" onsubmit="validateUser()"
