--- a/WebApp/Views/Users/UserAccount.cshtml
+++ b/WebApp/Views/Users/UserAccount.cshtml
@@ -16,11 +16,11 @@
             </div>
 
             <div class="box box--content box--center">
-                <a asp-action="Create" asp-controller="Auctions" class="button button--secondary button--rounded button--group button--group--first"> New Auction  + </a>
-                <a asp-action="UserEdition" asp-route-id="@ViewBag.User.UserId" class="button button--secondary button--rounded button--group"> Edit Account </a>
-                <a asp-controller="Reports" asp-action="MyAuctionsHistoryCsv" asp-route-id="@ViewBag.User.UserId" class="button button--secondary button--rounded button--group"> @WebApp.Resources.Shared.MyAuctionsCsv </a>
-                <a asp-controller="Reports" asp-action="MyAuctionsHistoryPdf" asp-route-id="@ViewBag.User.UserId" class="button button--secondary button--rounded button--group"> @WebApp.Resources.Shared.MyAuctionsPdf </a>
-                <a class="button button--secondary button--rounded button--group button--group--last" onclick="generateNewApiKey()">@WebApp.Resources.Shared.GenerateApiKey</a>
+                <a asp-action="Create" asp-controller="Auctions" class="button button--secondary button--rounded button--group button--group--first d--flex"><span>New Auction</span> </a>
+                <a asp-action="UserEdition" asp-route-id="@ViewBag.User.UserId" class="button button--secondary button--rounded button--group d--flex"> <span>Edit Account</span> </a>
+                <a asp-controller="Reports" asp-action="MyAuctionsHistoryCsv" asp-route-id="@ViewBag.User.UserId" class="button button--secondary button--rounded button--group d--flex"><span>@WebApp.Resources.Shared.MyAuctionsCsv</span></a>
+                <a asp-controller="Reports" asp-action="MyAuctionsHistoryPdf" asp-route-id="@ViewBag.User.UserId" class="button button--secondary button--rounded button--group d--flex"><span>@WebApp.Resources.Shared.MyAuctionsPdf</span></a>
+                <a class="button button--secondary button--rounded button--group button--group--last d--flex" onclick="generateNewApiKey()"><span>@WebApp.Resources.Shared.GenerateApiKey</span></a>
             </div>
 
         </div>
@@ -73,12 +73,12 @@
                     </form>
                     </div>
                 </div>
-                <div class="box-shadow box--content">
+                <div class="box-shadow box--content box--510--w--scroll">
                    
                     @foreach(var auction in ViewBag.MyAuctions)
                     {
                         <hr />
-                        <a asp-action="Auction" asp-controller="Auctions" asp-route-id="@auction.AuctionId">
+                        <a asp-action="Auction" asp-controller="Auctions" asp-route-id="@auction.AuctionId" class="text--primary">
                             <div class="box--item">
                                 <div class="box--item--title">Tilte: @auction.Title</div>
                                 @if (@auction.Status == AuctionStatus.Draft)
@@ -106,14 +106,14 @@
                 <span class="box--text">
                     @WebApp.Resources.Shared.Observed
                 </span>
-                <div class="box-shadow box--content">
+                <div class="box-shadow box--content box--510--w--scroll">
 
                     @foreach (var auction in ViewBag.MyObservedAuctions)
                     {
                         TimeSpan timeLeft = (TimeSpan)(auction.Auction.EndTime - DateTime.UtcNow);
 
                             <hr />
-                        <a asp-action="Auction" asp-controller="Auctions" asp-route-id="@auction.Auction.AuctionId">
+                        <a asp-action="Auction" asp-controller="Auctions" asp-route-id="@auction.Auction.AuctionId" class="text--primary">
 
                             <div class="box--item">
                                 <div class="box--item--title">Tilte: @auction.Auction.Title</div>
@@ -131,14 +131,14 @@
                 <span class="box--text">
                     @WebApp.Resources.Shared.MyBids
                 </span>
-                <div class="box-shadow box--content">
+                <div class="box-shadow box--content box--510--w--scroll">
 
                     @foreach (var bid in ViewBag.MyBids)
                     {
                         TimeSpan timeLeft = (TimeSpan)(bid.Auction.EndTime - DateTime.UtcNow);
 
                         <hr />
-                        <a asp-action="Auction" asp-controller="Auctions" asp-route-id="@bid.Auction.AuctionId">
+                        <a asp-action="Auction" asp-controller="Auctions" asp-route-id="@bid.Auction.AuctionId" class="text--primary">
 
                             <div class="box--item">
                                 <div class="box--item--title">Tilte: @bid.Auction.Title</div>
