--- a/WebApp/wwwroot/Styles/shared.scss
+++ b/WebApp/wwwroot/Styles/shared.scss
@@ -100,6 +100,7 @@ footer {
     justify-items: center;
     align-items: center;
     flex-direction: row;
+    height: 50px;
 }
 
 .currentLogin {
@@ -462,6 +463,8 @@ input[type=file] {
     margin: 2pt;
     height: 10vh;
     position: relative;
+    margin-left: 1vw;
+    margin-right: 1vw;
 }
 
 .userAccount--container .box .box--content .box--item .box--item--title {
@@ -507,6 +510,12 @@ input[type=file] {
 .box--horizontal .box .box--content {
     border: 2px solid #f1f1f1;
     justify-content: center;
+}
+
+.box--510--w--scroll {
+    height: 510px;
+    overflow-y: scroll;
+    border-radius: 0.4rem;
 }
 
 .box--horizontal .box--center {
@@ -835,7 +844,7 @@ input[type=file] {
     border-right: 0px;
     text-align: center;
     min-width: 150px;
-
+    margin-left: 1vw;
     span {
         display: inline-block;
         vertical-align: middle;
@@ -869,7 +878,7 @@ input[type=file] {
     }
 
     &--right {
-        flex: 3;
+        flex: 5;
         display: flex;
         align-content: end;
         margin-bottom: 2vh;
@@ -877,7 +886,7 @@ input[type=file] {
 
     &--searchbar {
         min-width: 450px;
-        flex: 8;
+        flex: 5;
         align-content: center;
         justify-content: center;
         margin-bottom: 2vh;
@@ -933,7 +942,7 @@ input[type=file] {
 
         &--group {
             height: 50px;
-            width: 50%;
+            width: 80%;
             min-width: 200px;
             margin-right: 0px;
             position: relative;
@@ -1596,4 +1605,11 @@ nav {
 
 .a--no--style{
     text-decoration: none;
+}
+
+
+.d--flex {
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
