--- a/WebApp/Views/Home/Index.cshtml
+++ b/WebApp/Views/Home/Index.cshtml
@@ -27,7 +27,7 @@
 
         <hr />
         <div class="nav--item">
-            <a asp-action="Index" asp-controller="Categories">More categories</a>
+            <a asp-action="Categories" asp-controller="Categories">More categories</a>
         </div>
 
     </div>
