added top 10 auctions button

--- a/WebApp/Views/Auctions/Top.cshtml
+++ b/WebApp/Views/Auctions/Top.cshtml
@@ -7,6 +7,16 @@
 @{
 }
 
+<style>
+    #text {
+        text-align: center;
+        margin: 50px;
+        margin-bottom: 100px;
+    }
+</style>
+
+
+<h1 class="text--message text--primary" id="text">@WebApp.Resources.Shared.Top10</h1>
 
 @foreach (var item in Model)
 {
