--- a/WebApp/Views/Home/Index.cshtml
+++ b/WebApp/Views/Home/Index.cshtml
@@ -36,9 +36,13 @@
     <!-- Main container -->
 
     <div class="main--container">
-                <span class="box--text">
-                    Recently finished:
-                </span>
+
+        <h3>
+            <span class="box--text">
+                Recently finished:
+            </span>
+        </h3>
+                
 
         <!-- SLIDER -->
         <div class="slide--container">
@@ -78,9 +82,11 @@
         <!-- Auctions -->
         <div class="bottom--box--container">
             <hr/>
-            <span class="box--text">
-                Maybe this will interest you:
-            </span>
+            <h3>
+                <span class="box--text">
+                    Maybe this will interest you:
+                </span>
+            </h3>
             
             @for(int i = 0; i < auctions.Count; i+=3)
             {
@@ -129,12 +135,12 @@
     </div>
 </div>
 
-
+<h3 style="margin-left: 20%; margin-top:3vh;">@WebApp.Resources.Shared.QuestionToAdmin</h3>
 <form method="post" action="/Home/Question" id="createQuestion" class="add--question">
     <span id="questionFormMessage" class="text-danger error--span"></span>
     <div class="form--group" style="width: 60%;">
         <label class="control--label form--label">E-mail</label>
-        <input name="questionEmail" id="questionEmail" class="control--input form--input" />
+        <input name="questionEmail" id="questionEmail" class="control--input form--input  background--primary" />
     </div>
     <textarea style="width: 53%;" class="auction--new--question auction--border background--primary text--primary border--primary" placeholder="@WebApp.Resources.Shared.NewQuestion" name="question" id="question"></textarea>
     <button class="auction--border add--question--button background--primary text--primary border--primary">
