--- a/WebApp/wwwroot/Styles/shared.scss
+++ b/WebApp/wwwroot/Styles/shared.scss
@@ -219,14 +219,14 @@ footer {
         display: inline-block;
         width: 20%;
         float: left;
-        margin: 0vh 0vw 1vh 1vh;
+        margin: 0vh 0vw 1vh 1vw;
     }
 
     &--with--description {
         display: inline-block;
         width: 100%;
         float: left;
-        margin: 2vh 0vw 1vh 1vh;
+        margin: 2vh 0vw 1vh 1vw;
 
         .select--file {
             width: 20%;
