--- a/WebApp/wwwroot/css/shared.css
+++ b/WebApp/wwwroot/css/shared.css
@@ -198,13 +198,13 @@
   display: inline-block;
   width: 20%;
   float: left;
-  margin: 0vh 0vw 1vh 1vh;
+  margin: 0vh 0vw 1vh 1vw;
 }
 .select--image--with--description {
   display: inline-block;
   width: 100%;
   float: left;
-  margin: 2vh 0vw 1vh 1vh;
+  margin: 2vh 0vw 1vh 1vw;
 }
 .select--image--with--description .select--file {
   width: 20%;
