--- a/WebApp/wwwroot/Styles/shared.scss
+++ b/WebApp/wwwroot/Styles/shared.scss
@@ -881,6 +881,7 @@ input[type=file] {
         flex: 5;
         display: flex;
         align-content: end;
+        justify-content: flex-end;
         margin-bottom: 2vh;
     }
 
