--- a/WebApp/wwwroot/css/shared.css
+++ b/WebApp/wwwroot/css/shared.css
@@ -797,6 +797,7 @@ input[type=file] {
   flex: 5;
   display: flex;
   align-content: end;
+  justify-content: flex-end;
   margin-bottom: 2vh;
 }
 .header--searchbar {
